--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
+    padding: 0;
+    margin: 0;
     font-family: 'Poppins', sans-serif;
-    color: #3A3A3A;
 }
 
 body{
@@ -10,6 +11,11 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 /* ===== Shared styles ===== */
@@ -33,6 +39,7 @@ body{
 header {
     max-width: 1200px;
     margin: 30px auto;
+    color: #3A3A3A;
 }
 
 /* ===== Nav related styles ===== */
@@ -74,22 +81,23 @@ nav ul li a {
 .banner {
     margin-top: 150px;
     justify-content: space-between;
-}
-
-.banner-title {
-    font-size: 3.25rem;
-    font-weight: 700;
-    margin: 8px 0;
+    gap: 100px;
 }
 
 .banner-content {
     max-width: 580px;
 }
 
+.banner-title {
+    font-size: 3.25rem;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
 .banner-description {
     font-size: 1rem;
     font-weight: 600;
-    margin-top: 0;
+    margin-bottom: 16px;
 }
 
 .banner .btn i {
@@ -111,6 +119,11 @@ nav ul li a {
     position: absolute;
 }
 
+/* ===== main styles ===== */
+main{
+    color: #3A3A3A;
+}
+
 /* ===== logos section ===== */
 .logos {
     display: grid;
@@ -122,11 +135,12 @@ nav ul li a {
     border-top: 1px solid lightgrey;
     border-bottom: 1px solid lightgray;
     padding: 26px 50px;
+    gap: 80px;
 }
 
 .logos .row {
     display: flex;
-    gap: 100px;
+    gap: 80px;
     align-items: center;
 }
 
@@ -137,7 +151,6 @@ nav ul li a {
 /* ===== Popular collection styles ===== */
 .collections{
     max-width: 1145px;
-    /* width: 1145px; */
     margin: 0 auto;
     position: relative;
 }
@@ -171,20 +184,24 @@ nav ul li a {
 .card-title{
     font-size: 1.75rem;
     font-weight: 500;
+    margin-bottom: 22px;
 }
 
 .card-price{
     font-size: 1.5rem;
     font-weight: 400;
+    margin-bottom: 22px;
 }
 
 .card-description{
     color: 0.75rem;
     color-scheme: #787885;
+    margin-top: 18px;
 }
 
 .collections img {
     width: 100%;
+    margin-bottom: 16px;
 }
 
 .see-more{
@@ -206,7 +223,7 @@ nav ul li a {
 
 .product-title{
     font-size: 2.3rem;
-    margin: 0;
+    margin-bottom: 20px;
 }
 
 .product-description{
@@ -214,6 +231,7 @@ nav ul li a {
     font-weight: 600;
     margin-bottom: 16px;
     padding-right: 80px;
+    margin-bottom: 20px;
 }
 
 .feature-products .btn i {
@@ -221,6 +239,46 @@ nav ul li a {
 }
 
 /* ===== footer sytles ===== */
+
+footer{
+    width: 100%;
+    background: #0a0826;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-content{
+    color: white;
+    max-width: 580px;
+    text-align: center;
+}
+
+.footer-title{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.footer-description{
+    font-size: 0.8rem;
+    margin-bottom: 16px;
+}
+
+.icons{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.icons i{
+    padding: 5px;
+    background: #23213c;
+    border-radius: 50%;
+    font-size: 1.5rem;
+}
 
 /* ===== logo related styles ===== */
 
@@ -266,10 +324,16 @@ nav ul li a {
         width: 80%;
     }
 
+    .banner-images svg{
+        height: 450px;
+        width: 450px;
+    }
+
     .logos {
         border: none;
         grid-template-columns: repeat(1, 1fr);
         margin: 0 auto;
+        gap: 0;
     }
 
     .logos .row {
